# cvx

./: .cvx-config.yaml  .gitignore  .golangci.yml  .goreleaser.yaml  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  TODO.md  cvx.toml  embed.go  go.mod  go.sum  justfile  main.go  mkdocs.yml  pyproject.toml
.cvx/workflows/: add.md  advise.md  build.md
.github/workflows/: ci.yml  docs.yml  lint.yml  release.yml
agent/: pyproject.toml  run.py  test_integration.py
agent/cvx_agent/: __main__.py  agents.py  main.py  models.py  test_agents.py
cmd/: add.go  advise.go  agent.go  approve.go  build.go  build_test.go  completion.go  config.go  doctor.go  helpers.go  init.go  list.go  match.go  rm.go  root.go  status.go  tailor.go  version.go  view.go
docs/: architecture.md  commands.md  configuration.md  getting-started.md  index.md  schema.md
pkg/ai/: ai_test.go  claude_cli.go  gemini_cli.go  interface.go
pkg/cache/: cache.go  cache_test.go
pkg/claude/: client.go  client_test.go
pkg/config/: config.go  config_test.go
pkg/gemini/: client.go  client_test.go
pkg/gh/: gh.go  gh_test.go
pkg/log/: log.go
pkg/project/: project.go
pkg/retry/: retry.go  retry_test.go
pkg/schema/: default.go  default_template.yml  schema.go  schema_test.go
pkg/signal/: signal.go
pkg/style/: style.go
pkg/utils/: file.go
pkg/workflow/: doc.go  workflow.go
pkg/workflow/defaults/: add.md  advise.md  build.md  match.md  tailor.md
reference/: EXPERIENCE.md
schema/: schema.cue  schema.json
src/: cv-style.sty  cv.tex  letter.tex
